--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2018"
 [dependencies]
 backtrace = "0.3.56"
 log = "0.4.14"
+names = { version = "0.11.0", default-features = false }
 tokio = { version = "1.5.0", features = ["sync"] }
